--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
 </head>
 <body>
     <!-- atributo inline -->
-    <h1 id="inline" style="color:aqua">minha página inicial</h1>
+    <h1 id="inline" style="color: rgb(255, 5, 201)"> <bdo>IBDS imports</bdo> </h1>
     <!-- atrbuto em bloco -->
-    <h1  >minha página inicial2</h1>
-
-    <h1>minha página inicial3</h1>
-    <p>este e meu primeiro paragrafo</p>
-    
-</body>
+    <h3 >CADASTRO PARA COMPRAS</h3>
+<b>Email:</b> <input type="emai"placeholder="email"/>
+<br><br>
+<b>Senha:</b><input type="password"placeholder="password"/>
+<br><br>
+<button <a href="www.youtube.com/watch?v=QLHqT8wA1Pk" target="_blank">entrar </a> </button><br><br>
+<img src="celular.jpg" alt="celular" width="300" height="500"> 
+<body style="background-color:rgb(133, 139, 79) ;">
+ </body>
 </html>
